# sanding-region-segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data_gen/: README.md  blenderproc_entrypoint.py  generate_dataset.py  randomization.py  renderer.py  scene_builder.py  texture_bake.py
data_gen/assets/: README.md
data_gen/configs/: randomization.yaml
evaluation/: README.md  error_analysis.ipynb  sim_to_real_gap.py
evaluation/real_masks/: README.md
evaluation/real_photos/: README.md
optimization/: README.md  benchmark.py  convert_openvino.py  export_onnx.py  quantize_onnxruntime.py
optimization/notebooks/: tensorrt_colab.ipynb
ros2_ws/: README.md
ros2_ws/src/mask_postprocess/: CMakeLists.txt  package.xml
ros2_ws/src/mask_postprocess/src/: mask_postprocess_node.cpp
ros2_ws/src/segmentation_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/segmentation_node/launch/: segmentation.launch.py
ros2_ws/src/segmentation_node/rviz/: segmentation.rviz
ros2_ws/src/segmentation_node/segmentation_node/: segmentation_node.py
sim/: Dockerfile  README.md  docker-compose.yml
sim/gazebo_world/: panel_world.world
tests/: test_dataset_preprocessing.py  test_generate_dataset_smoke.py  test_optimization_smoke.py  test_randomization.py  test_sim_to_real_smoke.py  test_training_smoke.py
training/: README.md  dataset.py  losses.py  metrics.py  model.py  train.py  train_ddp.py
training/notebooks/: colab_train.ipynb  kaggle_ddp_train.ipynb
