[project]
name = "sanding-region-segmentation"
version = "0.1.0"
description = "Sim-to-real semantic segmentation pipeline for robotic surface preparation (defect/sanding-region detection)."
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "jsonlines>=4.0",
]

[project.optional-dependencies]
datagen = [
    "blenderproc>=2.6",
]
train = [
    "torch>=2.1",
    "torchvision>=0.16",
    "tensorboard>=2.15",
]
optimize = [
    "onnx>=1.15",
    "onnxruntime>=1.16",
    "openvino>=2024.0",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "pre-commit>=3.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_gen*", "training*", "optimization*", "evaluation*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["ros2_ws", "sim", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
