<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segmentation_node</name>
  <version>0.1.0</version>
  <description>Real-time defect segmentation inference node (ONNX Runtime / OpenVINO backends).</description>
  <maintainer email="dharshareddy02@gmail.com">DharshanaReddy</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>mask_postprocess</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
